crates/next-custom-transforms/tests/errors/server-actions/server-graph/17/output.js
export async function foo() {
    return 'data';
}
